extends Control

# åœºæ™¯é¢„åŠ è½½ï¼ˆå»¶è¿ŸåŠ è½½+å®¹é”™ï¼‰
var main_scene: PackedScene
var difficulty_scene: PackedScene
var game_intro_scene: PackedScene

# ä¸»èœå•èŠ‚ç‚¹å¼•ç”¨ï¼ˆåŒ¹é…ä½ çš„åœºæ™¯èŠ‚ç‚¹åï¼‰
@onready var main_menu: Control = $MainMenu
@onready var start_game_btn: Button = $MainMenu/StartGameBtn
@onready var difficulty_btn: Button = $MainMenu/DifficultyBtn
@onready var game_intro_btn: Button = $MainMenu/GameIntroBtn

func _ready() -> void:
	# å¼ºåˆ¶æ˜¾ç¤ºä¸»èœå•
	if main_menu:
		main_menu.visible = true
	else:
		push_warning("âš ï¸ æ‰¾ä¸åˆ°MainMenuèŠ‚ç‚¹ï¼")
	
	# ç»‘å®šæŒ‰é’®ä¿¡å·ï¼ˆæ ¸å¿ƒä¿®å¤ï¼šæ‰‹åŠ¨ç»‘å®šä¿¡å·ï¼‰
	_bind_buttons()
	
	# å»¶è¿Ÿé¢„åŠ è½½åœºæ™¯
	call_deferred("_preload_all_scenes")
	print("Rootåœºæ™¯åˆå§‹åŒ–å®Œæˆ")

# ç»‘å®šæŒ‰é’®ä¿¡å·ï¼ˆåŒ¹é…ä½ çš„æŒ‰é’®èŠ‚ç‚¹åï¼‰
func _bind_buttons() -> void:
	if start_game_btn:
		start_game_btn.pressed.connect(_on_start_game_btn_pressed)
		print("âœ… StartGameBtnä¿¡å·ç»‘å®šæˆåŠŸ")
	else:
		push_error("âŒ æ‰¾ä¸åˆ°StartGameBtnèŠ‚ç‚¹ï¼")
	
	if difficulty_btn:
		difficulty_btn.pressed.connect(_on_difficulty_btn_pressed)
		print("âœ… DifficultyBtnä¿¡å·ç»‘å®šæˆåŠŸ")
	else:
		push_error("âŒ æ‰¾ä¸åˆ°DifficultyBtnèŠ‚ç‚¹ï¼")
	
	if game_intro_btn:
		game_intro_btn.pressed.connect(_on_game_intro_btn_pressed)
		print("âœ… GameIntroBtnä¿¡å·ç»‘å®šæˆåŠŸ")
	else:
		push_error("âŒ æ‰¾ä¸åˆ°GameIntroBtnèŠ‚ç‚¹ï¼")

# é¢„åŠ è½½æ‰€æœ‰åœºæ™¯
func _preload_all_scenes() -> void:
	main_scene = load("res://scenes/main/main.tscn")
	if not main_scene:
		push_error("âŒ mainåœºæ™¯åŠ è½½å¤±è´¥ï¼è·¯å¾„ï¼šres://scenes/main/main.tscn")
	else:
		print("âœ… mainåœºæ™¯é¢„åŠ è½½æˆåŠŸ")
	
	difficulty_scene = load("res://scenes/main/difficulty_select.tscn")
	if not difficulty_scene:
		push_error("âŒ éš¾åº¦é€‰æ‹©åœºæ™¯åŠ è½½å¤±è´¥ï¼è·¯å¾„ï¼šres://scenes/main/difficulty_select.tscn")
	else:
		print("âœ… éš¾åº¦é€‰æ‹©åœºæ™¯é¢„åŠ è½½æˆåŠŸ")
	
	game_intro_scene = load("res://scenes/main/game_intro.tscn")
	if not game_intro_scene:
		push_error("âŒ æ¸¸æˆä»‹ç»åœºæ™¯åŠ è½½å¤±è´¥ï¼è·¯å¾„ï¼šres://scenes/main/game_intro.tscn")
	else:
		print("âœ… æ¸¸æˆä»‹ç»åœºæ™¯é¢„åŠ è½½æˆåŠŸ")

# é€šç”¨åœºæ™¯åŠ è½½å‡½æ•°
func _load_new_scene(scene_packed: PackedScene) -> void:
	if not scene_packed:
		push_error("âŒ åœºæ™¯åŠ è½½å¤±è´¥ï¼šåœºæ™¯ä¸ºç©º")
		return
	
	# æ¸…ç†æ—§åœºæ™¯
	var root_node = get_tree().root
	for child in root_node.get_children():
		if child.name != "Global":
			child.queue_free()
	print("ğŸ—‘ï¸ å·²æ¸…ç†æ‰€æœ‰æ—§åœºæ™¯")
	
	# å®ä¾‹åŒ–æ–°åœºæ™¯
	var new_instance = scene_packed.instantiate()
	if not new_instance:
		push_error("âŒ åœºæ™¯å®ä¾‹åŒ–å¤±è´¥ï¼")
		return
	
	# æ·»åŠ åˆ°æ ¹èŠ‚ç‚¹
	root_node.add_child(new_instance)
	get_tree().current_scene = new_instance
	print("âœ… å·²åŠ è½½æ–°åœºæ™¯ï¼š", scene_packed.resource_path.get_file())
	
	# è®¾ç½®é”šç‚¹å…¨å±
	if new_instance is Control:
		new_instance.anchor_left = 0.0
		new_instance.anchor_top = 0.0
		new_instance.anchor_right = 1.0
		new_instance.anchor_bottom = 1.0

# æŒ‰é’®ç‚¹å‡»äº‹ä»¶ï¼ˆåŒ¹é…å‡½æ•°åï¼‰
func _on_start_game_btn_pressed():
	print("ğŸ”µ ç‚¹å‡»å¼€å§‹æ¸¸æˆ")
	Global.selected_difficulty = "endless"
	if main_scene:
		_load_new_scene(main_scene)
	else:
		push_error("âŒ æ— æ³•å¼€å§‹æ¸¸æˆï¼šmainåœºæ™¯æœªåŠ è½½")

func _on_difficulty_btn_pressed():
	print("ğŸ”µ ç‚¹å‡»éš¾åº¦é€‰æ‹©")
	if difficulty_scene:
		_load_new_scene(difficulty_scene)
	else:
		push_error("âŒ æ— æ³•æ‰“å¼€éš¾åº¦é€‰æ‹©ï¼šåœºæ™¯æœªåŠ è½½")

func _on_game_intro_btn_pressed():
	print("ğŸ”µ ç‚¹å‡»æ¸¸æˆä»‹ç»")
	if game_intro_scene:
		_load_new_scene(game_intro_scene)
	else:
		push_error("âŒ æ— æ³•æ‰“å¼€æ¸¸æˆä»‹ç»ï¼šåœºæ™¯æœªåŠ è½½")
